--- a/shoprest/src/main/resources/application.properties
+++ b/shoprest/src/main/resources/application.properties
@@ -8,3 +8,16 @@ spring.thymeleaf.suffix=.html
 spring.application.name=Bootstrap Spring Boot
 
 server.error.path=/error2
+
+#spring.main.banner-mode=on
+#logging.level.org.springframework=ERROR
+
+#spring.jpa.hibernate.ddl-auto=none
+
+#spring.datasource.initialization-mode=always
+#spring.datasource.platform=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+#spring.datasource.username=postgres
+#spring.datasource.password=s$cret
+
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
