--- a/shoprest/src/main/resources/application.properties
+++ b/shoprest/src/main/resources/application.properties
@@ -9,15 +9,22 @@ spring.application.name=Bootstrap Spring Boot
 
 server.error.path=/error2
 
-#spring.main.banner-mode=on
-#logging.level.org.springframework=ERROR
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
 
-#spring.jpa.hibernate.ddl-auto=none
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://192.168.1.2:5432/postgres?currentSchema=public
+spring.datasource.username=postgres
+spring.datasource.password=sa
 
-#spring.datasource.initialization-mode=always
-#spring.datasource.platform=postgres
-#spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
-#spring.datasource.username=postgres
-#spring.datasource.password=s$cret
+#drop n create table again, good for testing, comment this in production
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
