tidying up and experimenting with Hashmap

--- a/shoprest/src/main/resources/application.properties
+++ b/shoprest/src/main/resources/application.properties
@@ -14,11 +14,12 @@ spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://192.168.1.5:5432/postgres?currentSchema=public
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=public
 spring.datasource.username=postgres
 spring.datasource.password=sa
 
 #drop n create table again, good for testing, comment this in production
+#this will create tables if does not exist
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
