--- a/shoprest/src/main/resources/application.properties
+++ b/shoprest/src/main/resources/application.properties
@@ -1,30 +1,38 @@
+#Port where the application will start; used in url
 server.port=8080
+#????
+server.error.path=/error2
 
+
+#Thymeleaf related properties
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+#Name of the application
 spring.application.name=Bootstrap Spring Boot
 
-server.error.path=/error2
 
-## default connection pool
+## default database connection pool properties
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
+#spring.datasource.url=jdbc:postgresql://ip address:port/db name?currentSchema=schema name
 spring.datasource.url=jdbc:postgresql://192.168.1.5:5432/postgres?currentSchema=public
 spring.datasource.username=postgres
 spring.datasource.password=sa
 
-#drop n create table again, good for testing, comment this in production
+#this will create tables if the tables do not exist
 #spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+#The dialect specifies the type of database used in hibernate so that hibernate generate appropriate type of SQL statements.
+spring.jpa.database-platform.hibernate.dialect=PostgreSQLDialect
 hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+
+#below 4 properties show the queries being fired
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
