--- a/shoprest/src/main/resources/application.properties
+++ b/shoprest/src/main/resources/application.properties
@@ -36,3 +36,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
+
+
+#jackson properties for json processing
+spring.jackson.serialization.indent_output=true
+spring.jackson.default-property-inclusion=non_null
